--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,6 +99,8 @@ jobs:
         timeout-minutes: 330
         run: |
           cargo fuzz run fuzz_read -- -timeout=10s -fork=2 -runs=100000000 -max_len=2048 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_read -- -timeout=10s -fork=2 -runs=50000000 -max_len=4096 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_read -- -timeout=10s -fork=2 -runs=20000000 -max_len=5000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -125,7 +127,8 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run --no-default-features fuzz_read -- -timeout=10s -fork=2 -runs=100000000 -max_len=16384 -dict=fuzz/fuzz.dict
+          cargo fuzz run --no-default-features fuzz_read -- -timeout=10s -fork=2 -runs=100000000 -max_len=4096 -dict=fuzz/fuzz.dict
+          cargo fuzz run --no-default-features fuzz_read -- -timeout=10s -fork=2 -runs=20000000 -max_len=32768 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -152,7 +155,8 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run fuzz_write -- -timeout=10s -fork=2 -runs=5000000 -max_len=2000 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_write -- -timeout=10s -fork=2 -runs=5000000 -max_len=1000 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_write -- -timeout=10s -fork=2 -runs=1000000 -max_len=2000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -180,6 +184,7 @@ jobs:
         timeout-minutes: 330
         run: |
           cargo fuzz run --no-default-features fuzz_write -- -timeout=10s -fork=2 -runs=10000000 -max_len=10000 -dict=fuzz/fuzz.dict
+          cargo fuzz run --no-default-features fuzz_write -- -timeout=10s -fork=2 -runs=5000000 -max_len=20000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
