--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rust-version = "1.67.0"
 Library to support the reading and writing of zip files.
 """
 edition = "2021"
+exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
 
 [dependencies]
 aes = { version = "0.8.4", optional = true }
