--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 zstd = { version = "0.11.2", optional = true }
 
-[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
+[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
 crossbeam-utils = "0.8.8"
 
 [dev-dependencies]
