--- a/.github/workflows/dependabot_automation.yml
+++ b/.github/workflows/dependabot_automation.yml
@@ -1,4 +1,4 @@
-name: Dependabot auto-approve and auto-merge
+name: Auto-approve and auto-merge owner-written and Dependabot PRs
 on: pull_request
 
 permissions:
@@ -8,10 +8,11 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    if: ${{ github.actor == 'dependabot[bot]' || github.actor == 'Pr0methean' }}
     steps:
       - name: Dependabot metadata
         id: metadata
+        if: ${{ github.actor == 'dependabot[bot]' }}
         uses: dependabot/fetch-metadata@v2.0.0
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
