--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -12,13 +12,13 @@ cargo-fuzz = true
 libfuzzer-sys = "0.4"
 arbitrary = { version = "1.3.0", features = ["derive"] }
 
-[dependencies.zip_next]
+[dependencies.zip]
 path = ".."
 default-features = false
 
 [features]
-zip_next_defaults = ["zip_next/default"]
-default = ["zip_next_defaults"]
+zip_defaults = ["zip/default"]
+default = ["zip_defaults"]
 
 # Prevent this from interfering with workspaces
 [workspace]
