ci: Configure dependabot commit messages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
     open-pull-requests-limit: 10
     commit-message:
       prefix: "chore"
+      prefix-development: "test"
       include: "scope"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
