--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ Library to support the reading and writing of zip files.
 edition = "2021"
 exclude = ["tests/**", "examples/**", ".github/**", "fuzz/**"]
 
+[workspace.dependencies]
+time = "0.3.36"
+
 [dependencies]
 aes = { version = "0.8.4", optional = true }
 byteorder = "1.5.0"
@@ -28,7 +31,7 @@ flate2 = { version = "1.0.28", default-features = false, optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 pbkdf2 = { version = "0.12.2", optional = true }
 sha1 = { version = "0.10.6", optional = true }
-time = { version = "0.3.36", optional = true, default-features = false, features = [
+time = { workspace = true, optional = true, default-features = false, features = [
     "std",
 ] }
 zstd = { version = "0.13.1", optional = true, default-features = false }
@@ -46,7 +49,7 @@ arbitrary = { version = "1.3.2", features = ["derive"] }
 bencher = "0.1.5"
 getrandom = { version = "0.2.14", features = ["js"] }
 walkdir = "2.5.0"
-time = { version = "0.3.36", features = ["formatting", "macros"] }
+time = { workspace = true, features = ["formatting", "macros"] }
 anyhow = "1"
 [features]
 aes-crypto = ["aes", "constant_time_eq", "hmac", "pbkdf2", "sha1"]
