build: add release-plz action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -265,3 +265,30 @@ jobs:
         with:
           name: fuzz_write_no_features_corpus
           path: fuzz/corpus/seed/*
+
+  release-plz:
+    name: Release-plz
+    needs:
+      - build_and_test
+      - clippy
+      - check_fmt_and_docs
+      - fuzz_read
+      - fuzz_read_with_no_features
+      - fuzz_write
+      - fuzz_write_with_no_features
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          profile: minimal
+      - name: Run release-plz
+        uses: MarcoIeni/release-plz-action@v0.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
