build: configure release-plz

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,8 @@ updates:
       interval: daily
     open-pull-requests-limit: 10
     commit-message:
-      prefix: "chore"
-      prefix-development: "test"
+      prefix: "chore(deps)"
+      prefix-development: "test(deps)"
       include: "scope"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
