--- a/release-plz.toml
+++ b/release-plz.toml
@@ -9,6 +9,7 @@ protect_breaking_commits = true
 commit_parsers = [
     { message = "^feat", group = "<!-- 0 -->🚀 Features" },
     { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
+    { message = "^doc", skip = true },
     { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
     { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
     { message = "^style", skip = true },
