build: add missing permissions for release-plz action

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - 'master'
+permissions:
+  pull-requests: write
+  contents: write
 jobs:
   release-plz:
     name: Release-plz
