refactor!: remove `deflate-miniz` feature since it's now equivalent to `deflate` (#35)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,11 +54,11 @@ anyhow = "1"
 [features]
 aes-crypto = ["aes", "constant_time_eq", "hmac", "pbkdf2", "sha1"]
 chrono = ["chrono/default"]
-deflate = ["flate2/rust_backend"]
-deflate-miniz = ["flate2/default"]
-deflate-zlib = ["flate2/zlib"]
-deflate-zlib-ng = ["flate2/zlib-ng"]
-deflate-zopfli = ["zopfli"]
+_deflate-any = []
+deflate = ["flate2/rust_backend", "_deflate-any"]
+deflate-zlib = ["flate2/zlib", "_deflate-any"]
+deflate-zlib-ng = ["flate2/zlib-ng", "_deflate-any"]
+deflate-zopfli = ["zopfli", "_deflate-any"]
 lzma = ["lzma-rs/stream"]
 unreserved = []
 default = [
