ci: Don't need to trigger main CI on release-plz branches, or on PRs that don't target master

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,11 @@ name: CI
 
 on:
   pull_request:
+    branches:
+      - 'master'
   push:
+    branches-ignore:
+      - 'release-plz-**'
   workflow_dispatch:
 
 env:
