ci: Update name of auto-merge workflow
Signed-off-by: Chris Hennick <4961925+Pr0methean@users.noreply.github.com>

--- a/.github/workflows/auto_merge_prs.yml
+++ b/.github/workflows/auto_merge_prs.yml
@@ -1,4 +1,4 @@
-name: Auto-approve and auto-merge owner-written and Dependabot PRs
+name: Auto-merge PRs from owner and trusted bots
 on: pull_request
 
 permissions:
