--- a/.github/workflows/auto_merge_prs.yml
+++ b/.github/workflows/auto_merge_prs.yml
@@ -15,9 +15,9 @@ jobs:
         if: ${{ github.actor == 'dependabot[bot]' }}
         uses: dependabot/fetch-metadata@v2.1.0
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-token: "${{ secrets.RELEASE_PLZ_PAT }}"
       - name: Enable auto-merge
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: "${{ secrets.RELEASE_PLZ_PAT }}"
